force-app/main/default/objects/Milestone1_Milestone__c/fields/Next_Coaching_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_Coaching_Scheduled__c</fullName>
    <label>Next Coaching Scheduled</label>
    <type>Date</type>
</CustomField>