force-app/main/default/objects/Milestone1_Milestone__c/fields/Number_of_Historical_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Historical_Tasks__c</fullName>
    <label>Number of Historical Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>