force-app/main/default/objects/Milestone1_Milestone__c/fields/Open_Tasks_in_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks_in_Tasks__c</fullName>
    <inlineHelpText>Number of incomplete tasks related to this milestone</inlineHelpText>
    <label>Open Tasks (in Tasks)</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Task_Stage__c</field>
        <operation>equals</operation>
        <value>To Be Scheduled, Client Contacted, Scheduled, TBR (To Be Rescheduled), Pending Approval, In Progress, Confirmed, To Be Assigned, To Be Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>