force-app/main/default/objects/Milestone1_Milestone__c/fields/Opportunity_Lost__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lost__c</fullName>
    <formula>IF(TEXT(Opportunity__r.StageName) =&quot;00 - Closed/Lost&quot;,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Lost</label>
    <type>Checkbox</type>
</CustomField>