force-app/main/default/objects/Milestone1_Milestone__c/fields/Opportunity_Update__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Update__c</fullName>
    <label>Opportunity Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>