force-app/main/default/objects/Milestone1_Milestone__c/fields/Opportunity_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Won__c</fullName>
    <formula>IF(TEXT(Opportunity__r.StageName) =&quot;100 - Signed Contract&quot;,True,False)</formula>
    <label>Opportunity Won</label>
    <type>Checkbox</type>
</CustomField>