force-app/main/default/objects/Milestone1_Milestone__c/fields/Parent_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
    <label>Parent Deliverable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Milestone1_Milestone__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Milestone1_Milestone__c.Parent_Milestone__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <infoMessage>Parent Milestones must be part of the same project as the child milestone.  Also, Parent Milestone cannot also be a Child Milestone.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Milestone1_Milestone__c</referenceTo>
    <relationshipName>Child_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>