force-app/main/default/objects/Milestone1_Milestone__c/fields/Participant_contact__c.field-meta.xml
<CustomField>
    <fullName>Participant_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Deliverables (Participant Contact)</relationshipLabel>
    <relationshipName>TMG_Deliverables_1</relationshipName>
    <type>Lookup</type>
</CustomField>