force-app/main/default/objects/Milestone1_Milestone__c/fields/Participant_List_Clear_to_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Participant_List_Clear_to_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant List Clear to Schedule</label>
    <type>Checkbox</type>
</CustomField>