force-app/main/default/objects/Milestone1_Milestone__c/fields/Participant_List_Received__c.field-meta.xml
<CustomField>
    <fullName>Participant_List_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant List Received</label>
    <type>Checkbox</type>
</CustomField>