force-app/main/default/objects/Milestone1_Milestone__c/fields/Participant_List_Received_Formula__c.field-meta.xml
<CustomField>
    <fullName>Participant_List_Received_Formula__c</fullName>
    <formula>IF(Participant_List_Received__c,&quot;YES&quot;,&quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant List Received Formula</label>
    <type>Text</type>
</CustomField>