force-app/main/default/objects/Milestone1_Milestone__c/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <formula>Project__r.Project_Coordinator__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Coordinator</label>
    <type>Text</type>
</CustomField>