force-app/main/default/objects/Milestone1_Milestone__c/fields/Project_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Project_Wizard__c</fullName>
    <description>Automatically sets the Project Wizard for a deliverable based on the project. Used for creating PW as a related user for Deliverable work flows.</description>
    <formula>Project__r.Project_Wizard__r.Id</formula>
    <label>Project Wizard</label>
    <type>Text</type>
</CustomField>