force-app/main/default/objects/Milestone1_Milestone__c/fields/Reference_Call_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Call_Due_Date__c</fullName>
    <description>Earliest date a reference call task is due. This field is used in the clear to schedule email template</description>
    <label>Reference Call Due Date</label>
    <summarizedField>Milestone1_Task__c.Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reference Call</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>