force-app/main/default/objects/Milestone1_Milestone__c/fields/References_Clear_Formula__c.field-meta.xml
<CustomField>
    <fullName>References_Clear_Formula__c</fullName>
    <formula>IF(Clear_to_Reach_Out_for_References__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>References Clear Formula</label>
    <type>Text</type>
</CustomField>