force-app/main/default/objects/Milestone1_Milestone__c/fields/References_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>References_Cleared_Date__c</fullName>
    <label>References Cleared Date</label>
    <type>Date</type>
</CustomField>