force-app/main/default/objects/Milestone1_Milestone__c/fields/References_Rcvd_Formula__c.field-meta.xml
<CustomField>
    <fullName>References_Rcvd_Formula__c</fullName>
    <formula>IF(References_Received__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>References Rcvd Formula</label>
    <type>Text</type>
</CustomField>