force-app/main/default/objects/Milestone1_Milestone__c/fields/References_Received__c.field-meta.xml
<CustomField>
    <fullName>References_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References Received</label>
    <type>Checkbox</type>
</CustomField>