force-app/main/default/objects/Milestone1_Milestone__c/fields/References_Sent_to_Clara__c.field-meta.xml
<CustomField>
    <fullName>References_Sent_to_Clara__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References Sent to Clara</label>
    <type>Checkbox</type>
</CustomField>