force-app/main/default/objects/Milestone1_Milestone__c/fields/References_to_be_scheduled__c.field-meta.xml
<CustomField>
    <fullName>References_to_be_scheduled__c</fullName>
    <description>Remaining references to schedule</description>
    <label>References to be scheduled</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reference Call</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Task_Stage__c</field>
        <operation>equals</operation>
        <value>,To Be Scheduled, Client Contacted</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>