force-app/main/default/objects/Milestone1_Milestone__c/fields/Renewing__c.field-meta.xml
<CustomField>
    <fullName>Renewing__c</fullName>
    <label>Renewing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>