force-app/main/default/objects/Milestone1_Milestone__c/fields/Rhythm__c.field-meta.xml
<CustomField>
    <fullName>Rhythm__c</fullName>
    <formula>TEXT(TMG_Category__r.Frequency__c)</formula>
    <label>Rhythm</label>
    <type>Text</type>
</CustomField>