force-app/main/default/objects/Milestone1_Milestone__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <formula>To_Be_Scheduled_Tasks__c  = 0</formula>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>