force-app/main/default/objects/Milestone1_Milestone__c/fields/Second_Chair_EA__c.field-meta.xml
<CustomField>
    <fullName>Second_Chair_EA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Chair EA</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Deliverables (Second Chair EA)</relationshipLabel>
    <relationshipName>TMG_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>