force-app/main/default/objects/Milestone1_Milestone__c/fields/Second_Chair_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Second_Chair_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Chair</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Deliverables3</relationshipName>
    <type>Lookup</type>
</CustomField>