force-app/main/default/objects/Milestone1_Milestone__c/fields/TMG_Category__c.field-meta.xml
<CustomField>
    <fullName>TMG_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>TMG_Category__c.TMG_Project__r.Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TMG_Category__c</referenceTo>
    <relationshipLabel>TMG Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>