force-app/main/default/objects/Milestone1_Milestone__c/fields/TMG_Client_Assessment_Update__c.field-meta.xml
<CustomField>
    <fullName>TMG_Client_Assessment_Update__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;congaemailtemplateid=aA82A000000L0VC&quot; + 
&quot;&amp;emailsubject=Assessment Update For &quot; + Project__r.Name + 
&quot;&amp;ofn=Scheduling Update_&quot; + Assessed_Executive__c + 
&quot;&amp;reportid=00O2A000007YGXP&quot; + 
&quot;&amp;EmailFromID=0D22A000000bly7&quot; + 
&quot;&amp;emailadditionalto={qvar0},{qvar1},{qvar2}&quot; + 
&quot;&amp;emailcc={qvar3}&quot; + 
&quot;&amp;qvar0id=aA92A000000L2fL?pv0=&quot; + First_Chair_Lookup__r.Id + 
&quot;&amp;qvar1id=aA92A000000L2fQ?pv0=&quot; + Second_Chair_Lookup__r.Id + 
&quot;&amp;qvar2id=aA92A000000L2fk?pv0=&quot; + EA_Lookup__r.Id + 
&quot;&amp;qvar3id=aA92A000000L2fp?pv0=&quot; + Project_Coordinator__c + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Client Assessment Update</label>
    <type>Text</type>
</CustomField>