force-app/main/default/objects/Milestone1_Milestone__c/fields/TMG_Conga_Weekly_Offsite_Update__c.field-meta.xml
<CustomField>
    <fullName>TMG_Conga_Weekly_Offsite_Update__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;congaemailtemplateid=aA82A000000L0WE&quot; + 
&quot;&amp;emailsubject=Scheduling Update For &quot; + Project__r.Name + &quot;&apos;&quot; +  Name + 
&quot;&amp;ofn=Scheduling Update_&quot; + Assessed_Executive__c + 
&quot;&amp;ReportID=[OffsiteInterviews]00O2A000007YcZE, [OffsiteDate]00O2A000007YdNT, [BoardFBs]00O2A000007YdaS, [BoardDBs]00O2A000007Ydhs&quot; +
&quot;&amp;EmailFromID=0D22A000000bly7&quot; +
&quot;&amp;emailadditionalto={qvar0},{qvar1},{qvar2}&quot; + 
&quot;&amp;qvar0id=aA92A000000L2fL?pv0=&quot; + First_Chair_Lookup__r.Id + 
&quot;&amp;qvar1id=aA92A000000L2fQ?pv0=&quot; + Second_Chair_Lookup__r.Id + 
&quot;&amp;qvar2id=aA92A000000L2fk?pv0=&quot; + EA_Lookup__r.Id + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Conga Weekly Offsite Update</label>
    <type>Text</type>
</CustomField>