force-app/main/default/objects/Milestone1_Milestone__c/fields/TMG_EA__c.field-meta.xml
<CustomField>
    <fullName>TMG_EA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMG EA</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Deliverables2</relationshipName>
    <type>Lookup</type>
</CustomField>