force-app/main/default/objects/Milestone1_Milestone__c/fields/TMG_Primary__c.field-meta.xml
<CustomField>
    <fullName>TMG_Primary__c</fullName>
    <formula>Opportunity__r.TMG_Primary__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.TMG_Primary__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Primary</label>
    <type>Text</type>
</CustomField>