force-app/main/default/objects/Milestone1_Milestone__c/fields/TMG_Second_to_Last_Coaching_Sched_Date__c.field-meta.xml
<CustomField>
    <fullName>TMG_Second_to_Last_Coaching_Sched_Date__c</fullName>
    <description>Process Builder fills in scheduled date for second-to-last coaching date</description>
    <label>TMG Second-to-Last Coaching Sched Date</label>
    <type>Date</type>
</CustomField>