force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Interviews__c</fullName>
    <label>Total Interviews</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Board Interview, Team Effectiveness Interview</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>