force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_References__c.field-meta.xml
<CustomField>
    <fullName>Total_References__c</fullName>
    <description>Total number of references</description>
    <label>Total References</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reference Call</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>