force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks__c</fullName>
    <description>Total number of tasks under deliverable</description>
    <inlineHelpText>Total number of tasks under deliverable</inlineHelpText>
    <label>Total Tasks</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Task_Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled by TMG, Cancelled by Client, On Hold, Incomplete, Incomplete (Calendar Conflicts)</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>