force-app/main/default/objects/Milestone1_Milestone__c/fields/Updated_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Updated_from_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated from Opportunity</label>
    <type>Checkbox</type>
</CustomField>