force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/BD_Client_Contact.recordType-meta.xml
<RecordType>
    <fullName>BD_Client_Contact</fullName>
    <active>true</active>
    <description>All tasks associated with BD (calls/meetings/materials sent &amp; received)</description>
    <label>BD Client Contact</label>
</RecordType>