force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Billing_Contract_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Billing_Contract_Tracking</fullName>
    <active>false</active>
    <description>Used for billing/contract reminders</description>
    <label>Billing/Contract Tracking</label>
</RecordType>