force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Board_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Board_Evaluation</fullName>
    <active>false</active>
    <description>DO NOT USE</description>
    <label>Board Evaluation</label>
</RecordType>