force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Board_Presentation.recordType-meta.xml
<RecordType>
    <fullName>Board_Presentation</fullName>
    <active>true</active>
    <description>For all Board meetings where TMG is presenting (in-personor dial-in)</description>
    <label>Board Presentation</label>
</RecordType>