force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/CEO_Succession.recordType-meta.xml
<RecordType>
    <fullName>CEO_Succession</fullName>
    <active>false</active>
    <description>DO NOT USE</description>
    <label>CEO Succession</label>
</RecordType>