force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Data_Collection.recordType-meta.xml
<RecordType>
    <fullName>Data_Collection</fullName>
    <active>true</active>
    <description>Use for deliverable under Category - Data Collection (all assessment interviews and references)</description>
    <label>Data Collection</label>
</RecordType>