force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Debrief_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Debrief_Feedback</fullName>
    <active>true</active>
    <description>Used for deliverables under Category - Manager Debriefs or Feedback</description>
    <label>Debrief/Feedback</label>
</RecordType>