force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Executive_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Executive_Assessment</fullName>
    <active>true</active>
    <description>DO NOT USE</description>
    <label>Executive Assessment</label>
</RecordType>