force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Executive_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Executive_Coaching</fullName>
    <active>true</active>
    <description>Used under Coaching category - for all executive coaching tasks</description>
    <label>Executive Coaching</label>
</RecordType>