force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Interview_BOD_Team_SE.recordType-meta.xml
<RecordType>
    <fullName>Interview_BOD_Team_SE</fullName>
    <active>true</active>
    <description>Used for all BOD, Offsite and S&amp;E interviews</description>
    <label>Interview</label>
</RecordType>