force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>false</active>
    <description>DO NOT USE</description>
    <label>Other</label>
</RecordType>