force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/S_E_Profile_Key_Selection_Criteria.recordType-meta.xml
<RecordType>
    <fullName>S_E_Profile_Key_Selection_Criteria</fullName>
    <active>false</active>
    <description>DO NOT USE</description>
    <label>S&amp;E Profile/Key Selection Criteria</label>
</RecordType>