force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/S_E_Written_Deliverables.recordType-meta.xml
<RecordType>
    <fullName>S_E_Written_Deliverables</fullName>
    <active>true</active>
    <description>Use for written deliverables under Category S&amp;E Profile</description>
    <label>S&amp;E Written Deliverables</label>
</RecordType>