force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Speaking_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement</fullName>
    <active>true</active>
    <description>Use for all speaking engagements</description>
    <label>Speaking Engagement</label>
</RecordType>