force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Stakeholder_Debrief.recordType-meta.xml
<RecordType>
    <fullName>Stakeholder_Debrief</fullName>
    <active>true</active>
    <description>Use for all Stakeholder/Manager alignments &amp; debriefs</description>
    <label>Stakeholder Debrief</label>
</RecordType>