force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Team_Effectiveness.recordType-meta.xml
<RecordType>
    <fullName>Team_Effectiveness</fullName>
    <active>true</active>
    <description>Use for all offsite engagements</description>
    <label>Team Effectiveness</label>
</RecordType>