force-app/main/default/objects/Milestone1_Milestone__c/recordTypes/Written_Deliverables.recordType-meta.xml
<RecordType>
    <fullName>Written_Deliverables</fullName>
    <active>false</active>
    <description>Deliverable containing all writing/reviewing tasks for a project</description>
    <label>Written Deliverables</label>
</RecordType>