force-app/main/default/objects/Milestone1_Milestone__c/listViews/All_BD.listView-meta.xml
<ListView>
    <fullName>All_BD</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Open_Tasks_in_Tasks__c</columns>
    <columns>Closed_Lost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Business Development</value>
    </filters>
    <filters>
        <field>Closed_Lost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All BD</label>
    <sharedTo>
        <group>Jan_Stoe</group>
        <group>Joshua_DiFalco</group>
    </sharedTo>
</ListView>