force-app/main/default/objects/Milestone1_Milestone__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>First_Chair_Lookup__c</columns>
    <columns>Deadline__c</columns>
    <columns>TMG_Category__c</columns>
    <columns>Kickoff__c</columns>
    <columns>Total_Complete_Tasks__c</columns>
    <columns>Executive_Assessment__c</columns>
    <columns>Interview_Date__c</columns>
    <columns>Feedback_Date_formula__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Second_Chair__c</columns>
    <columns>Second_Chair_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>notContain</operation>
        <value>TMG,Business Development</value>
    </filters>
    <filters>
        <field>Complete__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Open</label>
</ListView>