force-app/main/default/objects/Milestone1_Milestone__c/listViews/All_Open_Assessments.listView-meta.xml
<ListView>
    <fullName>All_Open_Assessments</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Deadline__c</columns>
    <columns>First_Chair_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone1_Milestone__c.Data_Collection</value>
    </filters>
    <filters>
        <field>Complete__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Open Assessments</label>
</ListView>